[Part 3] - Add "create user endpoint - functional"